[tool.poetry]
name = "hotel-reservation-system"
version = "0.1.0"
description = ""
authors = ["Karim Tayie <karimsherif2597@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "^3.14.0"
django-filter = "^23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
